tried adding ' background: no-repeat 100% 5%;' css to the cards-flex-container which houses the set artwork background behind the cards to see if that fixes issues on iOS

--- a/src/components/layouts/Cards.css
+++ b/src/components/layouts/Cards.css
@@ -7,6 +7,7 @@
     padding-bottom: 6vh;
     min-height: 100vh;
     width: 100%;
+    background: no-repeat 100% 5%;
     background-size: cover;
     background-position: center center;
     background-attachment: fixed;
